alb-ingress/alb-ingress-demo2-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: 2048-game
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: frontend

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: 2048-game
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        imagePullPolicy: Always
        image: nginx
        ports:
        - containerPort: 80
