alb-ingress/alb-ingress-demo2-ingress-ipType.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "2048-ingress"
  namespace: "2048-game"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip #this will register the IP addresses of the pods directly in load balancer.
  labels:
    app: webserver-ingress
spec:
  rules:
    - http:
        paths:
          - path: /frontend/
            backend:
              serviceName: "service-frontend"
              servicePort: 80
          - path: /*
            backend:
              serviceName: "service-2048"
              servicePort: 80
